--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,13 @@
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <link href="https://fonts.googleapis.com/css?family=Eater|Roboto|Roboto+Condensed" rel="stylesheet">
   </head>
 
   <body>
+    <%= link_to 'Page 1 (basic demo of compoment interaction and use of state)', root_path %>
+    <br />
+    <%= link_to 'Page 2 (demo of fetching data with axios)', fetching_path %>
     <%= yield %>
   </body>
 </html>
