--- a/app/assets/stylesheets/monsters.scss
+++ b/app/assets/stylesheets/monsters.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the monsters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.monster-name {
+  background-color: #efefef;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.monster-description {
+  background-color: lightgreen;
+  padding: 30px;
+  border: 1px solid black;
+  border-radius: 10px;
+}
